Say "not valid UTF-8" for a dump or exclude file with bad bytes
A dump printed Java's "Input length = 1" and an exclude file printed
Rust's "stream did not contain valid UTF-8".